# Isosurfacing

./: ._CMakeLists.txt  ._README  ._TriangleList.h  ._proj6B.vtk  ._proj7.cxx  ._test_data.vtk  ._tricase.cxx  ._tricase.cxx.orig  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj7.cxx
proj7.app/Contents/: Info.plist
proj7.app/Contents/MacOS/: ._proj6B.vtk  proj7
